fix: article controls not clickable on mobile view

--- a/src/index.scss
+++ b/src/index.scss
@@ -534,6 +534,7 @@ textarea,
     &.hidden {
       transform: translate3d(-50%, 75%, 0);
       opacity: 0;
+      z-index: -1;
     }
   }
 }
